# ren

./: .clang-format  .envrc  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  flake.nix  imgui.ini
include/: wren.hpp
include/ren/: Buffer.h  Engine.h  Rasterizer.h  RenderTarget.h  Shader.h  VertexBuffer.h  Vulkan.h  VulkanPipeline.h  geom.h  math.h  screen.h  types.h
lib/imgui/backends/: imgui_impl_vulkan.cpp
lib/spirv_reflect/: common.cpp  spirv_reflect.h
shaders/: display.frag  display.frag.spv  display.vert  display.vert.spv  point.frag  point.frag.spv  point.vert  point.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: Buffer.cpp  Engine.cpp  RenderTarget.cpp  VulkanInstance.cpp  VulkanSwapchain.cpp  main.cpp  main_old.cpp
src/ren/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  main.cpp  types.h
src/ren/core/: Application.cpp  Application.h  Event.h  FramerateCounter.h  Instrumentation.h
src/ren/layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  LayerStack.h
src/ren/renderer/: Buffer.cpp  Buffer.h  FrameData.cpp  FrameData.h  Image.cpp  Image.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  Vulkan.cpp  Vulkan.h
src/ren/renderer/pipelines/: DisplayPipeline.cpp  DisplayPipeline.h  PointPipeline.cpp  PointPipeline.h  StandardPipeline.cpp  StandardPipeline.h  VulkanPipeline.cpp  VulkanPipeline.h
src/renderer/: Shader.cpp  VulkanInstance.cpp  VulkanPipeline.cpp
src/vkb/: VkBootstrap.h
src/wren/vm/: wren_vm.c
